[package]
    edition = "2024"
    name = "freertos-rust-example"
    version = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    [dependencies.freertos-next]
        features = ["critical_section_impl"]
        version = "0.4"

    [dependencies.stm32f1-hal]
        features = ["stm32f103", "x8"]
        path = "../stm32f1-hal"

[build-dependencies]
    freertos-build = "0.3"

[profile.release]
    # symbols are nice and they don't increase the size on Flash
    codegen-units = 1
    debug = true
    lto = true
    opt-level = 1
    # panic = 'abort'
