[package]
    edition = "2024"
    name = "stm32f1-freertos-example"
    version = "0.1.0"

[features]
    default = []
    i2c = []

[dependencies]
    [dependencies.freertos-next]
        features = [
            "minimum",
            "critical_section_impl",
            "stack_high_water",
            "heap_free_size",
        ]
        version = "0.9"

    [dependencies.stm32f1-hal]
        features = ["f103", "x8"]
        version = "0.9"

[build-dependencies]
    freertos-build = "0.4"

[profile.release]
    # symbols are nice and they don't increase the size on Flash
    codegen-units = 1
    debug = true
    lto = true
    opt-level = 1
    # panic = 'abort'
